--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section id="home"></section>
+        <section id="home">
+            <img src="images/profile.png" alt="Alan's profile" />
+            <h2>Hello I&#39;m Software engnieer, Alan</h2>
+            <p>A software engineer currently residing in Uijeongbu, Gyeonggi-do</p>
+            <a href="#contact">Contact Me</a>
+        </section>
         <!-- About -->
         <section id="about"></section>
         <!-- Skills -->
