--- a/index.html
+++ b/index.html
@@ -52,7 +52,41 @@
             <a href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about"></section>
+        <section id="about">
+            <h2>About me</h2>
+            <p>
+                I graduated from the Department of Computer Engineering and obtained qualifications as an information processing engineer and information security engineer.
+            </p>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <p>Front-end</p>
+                    <p>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-mobile"></i>
+                    <p>Mobile</p>
+                    <p>Android, iOS, React Navive, Flutter, Java, Swift, Kotlin</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-server"></i>
+                    <p>Back-end</p>
+                    <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
+                </li>
+            </ul>
+            <ul>
+                <li><img src="images/jobs/google.png" alt="goole logo"></li>
+                <div>
+                    <p>Google as Senior Software Engineer</p>
+                    <p>2025 February - Untill now</p>
+                </div>
+                <li><img src="images/jobs/samsung.png" alt="Samsung logo"></li>
+                <div>
+                    <p>Samsung as Software Engineer</p>
+                    <p>2023 February - 2024 December</p>
+                </div>
+            </ul>
+        </section>
         <!-- Skills -->
         <section id="skills"></section>
         <!-- Work -->
