--- a/index.html
+++ b/index.html
@@ -145,7 +145,82 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work"></section>
+        <section id="work">
+            <h2>My work</h2>
+            <p>Projects</p>
+            <ul>
+                <li>
+                    <button>All <span>8</span></button>
+                </li>
+                <li>
+                    <button>Front-end <span>3</span></button>
+                </li>
+                <li>
+                    <button>Back-end <span>3</span></button>
+                </li>
+                <li>
+                    <button>Mobile <span>2</span></button>
+                </li>
+            </ul>
+            <ul>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project1.webp" alt="Project1">
+                    <div>
+                        <h3>Project #1</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project2.webp" alt="Project2">
+                    <div>
+                        <h3>Project #2</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project3.webp" alt="Project3">
+                    <div>
+                        <h3>Project #3</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project4.webp" alt="Project4">
+                    <div>
+                        <h3>Project #4</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project5.webp" alt="Project5">
+                    <div>
+                        <h3>Project #5</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project6.webp" alt="Project6">
+                    <div>
+                        <h3>Project #6</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project7.webp" alt="Project7">
+                    <div>
+                        <h3>Project #7</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+                <li><a href="#" target="_blank">
+                    <img src="images/projects/project8.webp" alt="Project8">
+                    <div>
+                        <h3>Project #8</h3>
+                        <p>clone Coding with HTML, CSS</p>
+                    </div>
+                </a></li>
+            </ul>
+        </section>
         <!-- Testmonials -->
         <section id="testimonial"></section>
         <!-- Arrow up -->
