--- a/index.html
+++ b/index.html
@@ -222,7 +222,36 @@
             </ul>
         </section>
         <!-- Testmonials -->
-        <section id="testimonial"></section>
+        <section id="testimonial">
+            <h2>Testimonial</h2>
+            <p>See What they say about me</p>
+            <ul>
+                <li><img src="images/testimonials/people1.webp" alt="people1">
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nesciunt molestiae quos, dolorem deserunt sequi! Optio, eaque doloribus? Provident quis, reiciendis ipsum fugiat aperiam alias ex eos repellat cumque ipsa.
+                    </p>
+                    <p><a href="#">James kim</a> /google</p>
+                </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people2.webp" alt="people2">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia sint nisi, aperiam beatae nostrum fuga ea voluptatum nam ipsa adipisci eveniet asperiores iusto natus, rerum excepturi amet unde quos esse.
+                        </p>
+                        <p><a href="#">Anna Jin</a> /Samsung</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people3.webp" alt="people3">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat ducimus ipsa obcaecati, atque architecto facilis. Ex perferendis vero optio quas hic numquam consequatur maiores iste, ut facilis sapiente quia temporibus!
+                    </p>
+                    <p><a href="#">Anna Jin</a> /Samsung</p>
+                </li>
+            </ul>
+        </section>
         <!-- Arrow up -->
         <aside id="contact"></aside>
     </main>
