--- a/index.html
+++ b/index.html
@@ -253,9 +253,37 @@
             </ul>
         </section>
         <!-- Arrow up -->
-        <aside id="contact"></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer id="contact">
+        <h2>Let&#39;s talk</h2>
+        <p>hahahoho5811@gmail.com</p>
+        <ul>
+            <li>
+            <a 
+                href="https://github.com/SungRyulCho"
+                target="_blank"
+                title="my github link"
+            >
+                <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li>
+            <a 
+                href="https://www.linkedin.com/in/sungryul-cho-848612346/"
+                target="_blank"
+                title="my linkedin link"
+            >
+                <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+        <p>©Dream Coding Alan - All rights reserved</p>
+    </footer>
 </body>
 </html>
