--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img src="images/profile.png" alt="Alan's profile" />
-            <h2>Hello I&#39;m Software engnieer, Alan</h2>
-            <p>A software engineer currently residing in Uijeongbu, Gyeonggi-do</p>
-            <a href="#contact">Contact Me</a>
+            <img class="home__avatar" src="images/profile.png" alt="Alan's profile" />
+            <h2 class="home__title">Hello <br />I&#39;m <strong class="home__title__strong">Software Engnieer</strong>, Alan</h2>
+            <p class="home__description">A software engineer currently residing in Uijeongbu, Gyeonggi-do</p>
+            <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
         <section id="about">
