--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>
+        <section id="about" class="section">
+            <h2 class="title">About me</h2>
+            <p class="description">
                 I graduated from the Department of Computer Engineering and obtained qualifications as an information processing engineer and information security engineer.
             </p>
             <ul>
@@ -88,9 +88,9 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills & Attributes</p>
+        <section id="skills" class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills & Attributes</p>
             <p>
                 Experience with all phases of the software life-cycle.Passion for learning new technologies. Capable of working within a team environment and independently. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
             </p>
@@ -145,9 +145,9 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>Projects</p>
+        <section id="work" class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">Projects</p>
             <ul>
                 <li>
                     <button>All <span>8</span></button>
@@ -222,9 +222,9 @@
             </ul>
         </section>
         <!-- Testmonials -->
-        <section id="testimonial">
-            <h2>Testimonial</h2>
-            <p>See What they say about me</p>
+        <section id="testimonial" class="section">
+            <h2 class="title">Testimonial</h2>
+            <p class="description">See What they say about me</p>
             <ul>
                 <li><img src="images/testimonials/people1.webp" alt="people1">
                 <div>
@@ -240,7 +240,7 @@
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia sint nisi, aperiam beatae nostrum fuga ea voluptatum nam ipsa adipisci eveniet asperiores iusto natus, rerum excepturi amet unde quos esse.
                         </p>
-                        <p><a href="#">Anna Jin</a> /Samsung</p>
+                        <p><a href="#">David jang</a> /Samsung</p>
                     </div>
                 </li>
                 <li>
@@ -260,9 +260,9 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-        <h2>Let&#39;s talk</h2>
-        <p>hahahoho5811@gmail.com</p>
+    <footer id="contact" class="section">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">hahahoho5811@gmail.com</p>
         <ul>
             <li>
             <a 
@@ -283,7 +283,7 @@
                 </a>
             </li>
         </ul>
-        <p>©Dream Coding Alan - All rights reserved</p>
+        <p>©Software Engineer Alan - All rights reserved</p>
     </footer>
 </body>
 </html>
