--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section max-container">
             <h2 class="title">About me</h2>
             <p class="description">
                 I graduated from the Department of Computer Engineering and obtained qualifications as an information processing engineer and information security engineer.
             </p>
-            <ul>
-                <li>
-                    <i class="fa-brands fa-html5"></i>
-                    <p>Front-end</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-brands fa-html5 major__icon"></i>
+                    <p class="major__title">Front-end</p>
                     <p>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-mobile"></i>
-                    <p>Mobile</p>
+                <li class="major">
+                    <i class="fa-solid fa-mobile major__icon"></i>
+                    <p class="major__title">Mobile</p>
                     <p>Android, iOS, React Navive, Flutter, Java, Swift, Kotlin</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-server"></i>
-                    <p>Back-end</p>
+                <li class="major">
+                    <i class="fa-solid fa-server major__icon"></i>
+                    <p class="major__title">Back-end</p>
                     <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
                 </li>
             </ul>
-            <ul>
-                <li><img src="images/jobs/google.png" alt="goole logo"></li>
+            <ul class="jobs">
+                <li class="job"><img src="images/jobs/google.png" alt="goole logo"></li>
                 <div>
-                    <p>Google as Senior Software Engineer</p>
-                    <p>2025 February - Untill now</p>
+                    <p class="job__name">Google as Senior Software Engineer</p>
+                    <p class="job__period">2025 February - Untill now</p>
                 </div>
-                <li><img src="images/jobs/samsung.png" alt="Samsung logo"></li>
+                <li class="job"><img src="images/jobs/samsung.png" alt="Samsung logo"></li>
                 <div>
-                    <p>Samsung as Software Engineer</p>
-                    <p>2023 February - 2024 December</p>
+                    <p class="job__name">Samsung as Software Engineer</p>
+                    <p class="job__period">2023 February - 2024 December</p>
                 </div>
             </ul>
         </section>
