--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
-            <h2 class="title">My Skills</h2>
+            <div class="max-container">
+                <h2 class="title">My Skills</h2>
             <p class="description">Skills & Attributes</p>
             <p>
                 Experience with all phases of the software life-cycle.Passion for learning new technologies. Capable of working within a team environment and independently. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
             </p>
-            <div>
-                <section>
-                    <h3>Coding Skills</h3>
+            <div class="skills">
+                <section class="skills__coding">
+                    <h3 class="skills__title">Coding Skills</h3>
                     <ul>
                         <li>
                             <div><span>HTML</span><span>98%</span><div>
@@ -124,8 +125,8 @@
                         </li>
                     </ul>
                 </section>
-                <section>
-                    <h3>Tools</h3>
+                <section class="skills__tools">
+                    <h3 class="skills__title">Tools</h3>
                     <ul>
                         <li>Visual Studio Code</li>
                         <li>Intellij</li>
@@ -134,14 +135,15 @@
                         <li>Sketch app</li>
                     </ul>
                 </section>
-                <section>
-                    <h3>Etc</h3>
+                <section class="skills__etc">
+                    <h3 class="skills__title">Etc</h3>
                     <ul>
                         <li>Git</li>
                         <li>Scrum Master</li>
                         <li>Math</li>
                     </ul>
                 </section>
+            </div>
             </div>
         </section>
         <!-- Work -->
