CSS-Work-Category

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- javascript -->
     <script src="src/mata.js" defer></script>
-    </head>
-    <body>
+  </head>
+  <body>
     <!-- Header -->
     <header class="header">
       <div class="header__logo">
@@ -55,8 +55,8 @@
     </header>
     <!-- Main -->
     <main>
-        <!-- Home -->
-        <section id="home">
+      <!-- Home -->
+      <section id="home">
         <img
           class="home__avatar"
           src="images/profile.png"
@@ -70,9 +70,9 @@
           A software engineer currently residing in Uijeongbu, Gyeonggi-do
         </p>
         <a class="home__contact" href="#contact">Contact Me</a>
-        </section>
-        <!-- About -->
-        <section id="about" class="section max-container">
+      </section>
+      <!-- About -->
+      <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
         <p class="description">
           I graduated from the Department of Computer Engineering and obtained
@@ -112,188 +112,198 @@
             <p class="job__period">2023 February - 2024 December</p>
           </div>
         </ul>
-        </section>
-        <!-- Skills -->
-        <section id="skills" class="section">
+      </section>
+      <!-- Skills -->
+      <section id="skills" class="section">
         <div class="max-container">
-            <h2 class="title">My Skills</h2>
-            <p class="description">Skills & Attributes</p>
-            <p>
+          <h2 class="title">My Skills</h2>
+          <p class="description">Skills & Attributes</p>
+          <p>
             Experience with all phases of the software life-cycle.Passion for
             learning new technologies. Capable of working within a team
             environment and independently. Ability to plan and time schedule,
             work under strict time pressure and adapt quickly when needed.
-            </p>
-            <div class="skills">
+          </p>
+          <div class="skills">
             <section class="skills__coding">
-                <h3 class="skills__title">Coding Skills</h3>
-                <ul>
+              <h3 class="skills__title">Coding Skills</h3>
+              <ul>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>HTML</span><span>98%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 98%"></div>
-                    </div>
+                  </div>
                 </li>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>CSS</span><span>90%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 90%"></div>
-                    </div>
+                  </div>
                 </li>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>JavaScript</span><span>90%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 90%"></div>
-                    </div>
+                  </div>
                 </li>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>TypeScript</span><span>80%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 80%"></div>
-                    </div>
+                  </div>
                 </li>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>React</span><span>79%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 79%"></div>
-                    </div>
+                  </div>
                 </li>
                 <li class="bar">
-                    <div class="bar__metadata">
+                  <div class="bar__metadata">
                     <span>Nodejs</span><span>68%</span>
-                    </div>
-                    <div class="bar__bg">
+                  </div>
+                  <div class="bar__bg">
                     <div class="bar__value" style="width: 68%"></div>
-                    </div>
+                  </div>
                 </li>
-                </ul>
+              </ul>
             </section>
             <section class="skills__tools">
-                <h3 class="skills__title">Tools</h3>
-                <ul>
+              <h3 class="skills__title">Tools</h3>
+              <ul>
                 <li>Visual Studio Code</li>
                 <li>Intellij</li>
                 <li>Android Studio Code</li>
                 <li>iOS development tools</li>
                 <li>Sketch app</li>
-                </ul>
+              </ul>
             </section>
             <section class="skills__etc">
-                <h3 class="skills__title">Etc</h3>
-                <ul>
+              <h3 class="skills__title">Etc</h3>
+              <ul>
                 <li>Git</li>
                 <li>Scrum Master</li>
                 <li>Math</li>
-                </ul>
+              </ul>
             </section>
-            </div>
+          </div>
         </div>
-        </section>
-        <!-- Work -->
-        <section id="work" class="section">
-        <h2 class="title">My work</h2>
-        <p class="description">Projects</p>
-        <ul>
-          <li>
-            <button>All <span>8</span></button>
-          </li>
-          <li>
-            <button>Front-end <span>3</span></button>
-          </li>
-          <li>
-            <button>Back-end <span>3</span></button>
-          </li>
-          <li>
-            <button>Mobile <span>2</span></button>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project1.webp" alt="Project1" />
-              <div>
-                <h3>Project #1</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project2.webp" alt="Project2" />
-              <div>
-                <h3>Project #2</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project3.webp" alt="Project3" />
-              <div>
-                <h3>Project #3</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project4.webp" alt="Project4" />
-              <div>
-                <h3>Project #4</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project5.webp" alt="Project5" />
-              <div>
-                <h3>Project #5</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project6.webp" alt="Project6" />
-              <div>
-                <h3>Project #6</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project7.webp" alt="Project7" />
-              <div>
-                <h3>Project #7</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#" target="_blank">
-              <img src="images/projects/project8.webp" alt="Project8" />
-              <div>
-                <h3>Project #8</h3>
-                <p>clone Coding with HTML, CSS</p>
-              </div>
-            </a>
-          </li>
-        </ul>
-        </section>
-        <!-- Testmonials -->
-        <section id="testimonial" class="section">
+      </section>
+      <!-- Work -->
+      <section id="work" class="section">
+        <div class="max-container">
+          <h2 class="title">My work</h2>
+          <p class="description">Projects</p>
+          <ul class="categories">
+            <li>
+              <button class="category category--selected">
+                All <span class="category__count">8</span>
+              </button>
+            </li>
+            <li>
+              <button class="category">
+                Front-end <span class="category__count">3</span>
+              </button>
+            </li>
+            <li>
+              <button class="category">
+                Back-end <span class="category__count">3</span>
+              </button>
+            </li>
+            <li>
+              <button class="category">
+                Mobile <span class="category__count">2</span>
+              </button>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project1.webp" alt="Project1" />
+                <div>
+                  <h3>Project #1</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project2.webp" alt="Project2" />
+                <div>
+                  <h3>Project #2</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project3.webp" alt="Project3" />
+                <div>
+                  <h3>Project #3</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project4.webp" alt="Project4" />
+                <div>
+                  <h3>Project #4</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project5.webp" alt="Project5" />
+                <div>
+                  <h3>Project #5</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project6.webp" alt="Project6" />
+                <div>
+                  <h3>Project #6</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project7.webp" alt="Project7" />
+                <div>
+                  <h3>Project #7</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img src="images/projects/project8.webp" alt="Project8" />
+                <div>
+                  <h3>Project #8</h3>
+                  <p>clone Coding with HTML, CSS</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Testmonials -->
+      <section id="testimonial" class="section">
         <h2 class="title">Testimonial</h2>
         <p class="description">See What they say about me</p>
         <ul>
@@ -332,13 +342,13 @@
             <p><a href="#">Anna Jin</a> /Samsung</p>
           </li>
         </ul>
-        </section>
-        <!-- Arrow up -->
-        <aside>
+      </section>
+      <!-- Arrow up -->
+      <aside>
         <a href="#home" title="back to top">
-            <i class="fa-solid fa-arrow-up"></i>
+          <i class="fa-solid fa-arrow-up"></i>
         </a>
-        </aside>
+      </aside>
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
@@ -366,5 +376,5 @@
       </ul>
       <p>©Software Engineer Alan - All rights reserved</p>
     </footer>
-    </body>
+  </body>
 </html>
