--- a/index.html
+++ b/index.html
@@ -226,75 +226,107 @@
               </button>
             </li>
           </ul>
-          <ul>
-            <li>
+          <ul class="projects">
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project1.webp" alt="Project1" />
-                <div>
-                  <h3>Project #1</h3>
+                <img
+                  src="images/projects/project1.webp"
+                  alt="Project1"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #1</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project2.webp" alt="Project2" />
-                <div>
-                  <h3>Project #2</h3>
+                <img
+                  src="images/projects/project2.webp"
+                  alt="Project2"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #2</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project3.webp" alt="Project3" />
-                <div>
-                  <h3>Project #3</h3>
+                <img
+                  src="images/projects/project3.webp"
+                  alt="Project3"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #3</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project4.webp" alt="Project4" />
-                <div>
-                  <h3>Project #4</h3>
+                <img
+                  src="images/projects/project4.webp"
+                  alt="Project4"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #4</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project5.webp" alt="Project5" />
-                <div>
-                  <h3>Project #5</h3>
+                <img
+                  src="images/projects/project5.webp"
+                  alt="Project5"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #5</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project6.webp" alt="Project6" />
-                <div>
-                  <h3>Project #6</h3>
+                <img
+                  src="images/projects/project6.webp"
+                  alt="Project6"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #6</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project7.webp" alt="Project7" />
-                <div>
-                  <h3>Project #7</h3>
+                <img
+                  src="images/projects/project7.webp"
+                  alt="Project7"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #7</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project8.webp" alt="Project8" />
-                <div>
-                  <h3>Project #8</h3>
+                <img
+                  src="images/projects/project8.webp"
+                  alt="Project8"
+                  class="project__img"
+                />
+                <div class="project__metadata">
+                  <h3 class="project__title">Project #8</h3>
                   <p>clone Coding with HTML, CSS</p>
                 </div>
               </a>
