--- a/index.html
+++ b/index.html
@@ -335,43 +335,66 @@
         </div>
       </section>
       <!-- Testmonials -->
-      <section id="testimonial" class="section">
+      <section id="testimonial" class="section max max-container">
         <h2 class="title">Testimonial</h2>
         <p class="description">See What they say about me</p>
-        <ul>
-          <li>
-            <img src="images/testimonials/people1.webp" alt="people1" />
-            <div>
+        <ul class="testimonials">
+          <li class="testimonial">
+            <img
+              src="images/testimonials/people1.webp"
+              alt="people1"
+              class="testimonial__img"
+            />
+            <div class="testimonial__bubble">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Aliquid nesciunt molestiae quos, dolorem deserunt sequi! Optio,
                 eaque doloribus? Provident quis, reiciendis ipsum fugiat aperiam
                 alias ex eos repellat cumque ipsa.
               </p>
-              <p><a href="#">James kim</a> /google</p>
+              <p>
+                <a href="#" class="testimonial__bubble__name">James kim</a>
+                /google
+              </p>
             </div>
           </li>
-          <li>
-            <img src="images/testimonials/people2.webp" alt="people2" />
-            <div>
+          <li class="testimonial">
+            <img
+              src="images/testimonials/people2.webp"
+              alt="people2"
+              class="testimonial__img"
+            />
+            <div class="testimonial__bubble">
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia
                 sint nisi, aperiam beatae nostrum fuga ea voluptatum nam ipsa
                 adipisci eveniet asperiores iusto natus, rerum excepturi amet
                 unde quos esse.
               </p>
-              <p><a href="#">David jang</a> /Samsung</p>
+              <p>
+                <a href="#" class="testimonial__bubble__name">David jang</a>
+                /Samsung
+              </p>
             </div>
           </li>
-          <li>
-            <img src="images/testimonials/people3.webp" alt="people3" />
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat
-              ducimus ipsa obcaecati, atque architecto facilis. Ex perferendis
-              vero optio quas hic numquam consequatur maiores iste, ut facilis
-              sapiente quia temporibus!
-            </p>
-            <p><a href="#">Anna Jin</a> /Samsung</p>
+          <li class="testimonial">
+            <img
+              src="images/testimonials/people3.webp"
+              alt="people3"
+              class="testimonial__img"
+            />
+            <div class="testimonial__bubble">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Quaerat ducimus ipsa obcaecati, atque architecto facilis. Ex
+                perferendis vero optio quas hic numquam consequatur maiores
+                iste, ut facilis sapiente quia temporibus!
+              </p>
+              <p>
+                <a href="#" class="testimonial__bubble__name">Anna Jin</a>
+                /Samsung
+              </p>
+            </div>
           </li>
         </ul>
       </section>
