--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         </div>
       </section>
       <!-- Testmonials -->
-      <section id="testimonial" class="section max max-container">
+      <section id="testimonial" class="section max-container">
         <h2 class="title">Testimonial</h2>
         <p class="description">See What they say about me</p>
         <ul class="testimonials">
@@ -400,36 +400,40 @@
       </section>
       <!-- Arrow up -->
       <aside>
-        <a href="#home" title="back to top">
+        <a class="arrow-up" href="#home" title="back to top">
           <i class="fa-solid fa-arrow-up"></i>
         </a>
       </aside>
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
-      <h2 class="title">Let&#39;s talk</h2>
-      <p class="description">hahahoho5811@gmail.com</p>
-      <ul>
-        <li>
-          <a
-            href="https://github.com/SungRyulCho"
-            target="_blank"
-            title="my github link"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/sungryul-cho-848612346/"
-            target="_blank"
-            title="my linkedin link"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </li>
-      </ul>
-      <p>©Software Engineer Alan - All rights reserved</p>
+      <div class="max-container">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">hahahoho5811@gmail.com</p>
+        <ul class="contact__links">
+          <li>
+            <a
+              class="contact__link"
+              href="https://github.com/SungRyulCho"
+              target="_blank"
+              title="my github link"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              class="contact__link"
+              href="https://www.linkedin.com/in/sungryul-cho-848612346/"
+              target="_blank"
+              title="my linkedin link"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+        </ul>
+        <p>©Software Engineer Alan - All rights reserved</p>
+      </div>
     </footer>
   </body>
 </html>
