--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="header__logo__img" src="images/favicon.ico" alt="logo" />
         <h1 class="header__logo_title"><a href="#">Alan</a></h1>
       </div>
-      <nav>
+      <nav class="header__nav">
         <ul class="header__menu">
           <li><a class="header__menu__item active" href="#home">Home</a></li>
           <li><a class="header__menu__item" href="#about">About</a></li>
@@ -99,18 +99,18 @@
         <ul class="jobs">
           <li class="job">
             <img src="images/jobs/google.png" alt="goole logo" />
+            <div>
+              <p class="job__name">Google as Senior Software Engineer</p>
+              <p class="job__period">2025 February - Untill now</p>
+            </div>
           </li>
-          <div>
-            <p class="job__name">Google as Senior Software Engineer</p>
-            <p class="job__period">2025 February - Untill now</p>
-          </div>
           <li class="job">
             <img src="images/jobs/samsung.png" alt="Samsung logo" />
+            <div>
+              <p class="job__name">Samsung as Software Engineer</p>
+              <p class="job__period">2023 February - 2024 December</p>
+            </div>
           </li>
-          <div>
-            <p class="job__name">Samsung as Software Engineer</p>
-            <p class="job__period">2023 February - 2024 December</p>
-          </div>
         </ul>
       </section>
       <!-- Skills -->
