--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- javascript -->
-    <script src="src/mata.js" defer></script>
+    <script src="src/main.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -64,7 +64,7 @@
         />
         <h2 class="home__title">
           Hello <br />I&#39;m
-          <strong class="home__title__strong">Software Engnieer</strong>, Alan
+          <strong class="home__title__strong">Software Engineer</strong>, Alan
         </h2>
         <p class="home__description">
           A software engineer currently residing in Uijeongbu, Gyeonggi-do
