--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img
+        <div class="home__container">
+          <img
           class="home__avatar"
           src="images/profile.png"
           alt="Alan's profile"
@@ -71,6 +72,7 @@
         </p>
         <a class="home__contact" href="#contact">Contact Me</a>
       </section>
+        </div>
       <!-- About -->
       <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
