--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
       <section id="home">
         <div class="home__container">
           <img
-          class="home__avatar"
-          src="images/profile.png"
-          alt="Alan's profile"
-        />
-        <h2 class="home__title">
-          Hello <br />I&#39;m
-          <strong class="home__title__strong">Software Engineer</strong>, Alan
-        </h2>
-        <p class="home__description">
-          A software engineer currently residing in Uijeongbu, Gyeonggi-do
-        </p>
-        <a class="home__contact" href="#contact">Contact Me</a>
-      </section>
+            class="home__avatar"
+            src="images/profile.png"
+            alt="Alan's profile"
+          />
+          <h2 class="home__title">
+            Hello <br />I&#39;m
+            <strong class="home__title__strong">Software Engineer</strong>, Alan
+          </h2>
+          <p class="home__description">
+            A software engineer currently residing in Uijeongbu, Gyeonggi-do
+          </p>
+          <a class="home__contact" href="#contact">Contact Me</a>
         </div>
+      </section>
       <!-- About -->
       <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
@@ -212,28 +212,28 @@
           <p class="description">Projects</p>
           <ul class="categories">
             <li>
-              <button class="category category--selected">
+              <button class="category category--selected" data-category="all">
                 All <span class="category__count">8</span>
               </button>
             </li>
             <li>
-              <button class="category">
-                Front-end <span class="category__count">3</span>
+              <button class="category" data-category="front-end">
+                Front-end <span class="category__count">4</span>
               </button>
             </li>
             <li>
-              <button class="category">
-                Back-end <span class="category__count">3</span>
+              <button class="category" data-category="back-end">
+                Back-end <span class="category__count">2</span>
               </button>
             </li>
             <li>
-              <button class="category">
+              <button class="category" data-category="mobile">
                 Mobile <span class="category__count">2</span>
               </button>
             </li>
           </ul>
           <ul class="projects">
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project1.webp"
@@ -246,7 +246,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project2.webp"
@@ -259,7 +259,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="back-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project3.webp"
@@ -272,7 +272,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="mobile">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project4.webp"
@@ -285,7 +285,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project5.webp"
@@ -298,7 +298,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="back-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project6.webp"
@@ -311,7 +311,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="mobile">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project7.webp"
@@ -324,7 +324,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project8.webp"
