--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
-    <title>Alan&#39;s Portfolio</title>
+    <title>Alan's Portfolio - Software Engineer</title>
     <meta
       name="description"
-      content="Portfolio for world-renowned software enginner Alan"
+      content="Portfolio of Alan, a world-class software engineer."
     />
     <meta name="author" content="Alan" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -33,6 +33,7 @@
     <!-- javascript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
+    <script type="module" src="src/active_menu.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -46,9 +47,9 @@
           <li><a class="header__menu__item active" href="#home">Home</a></li>
           <li><a class="header__menu__item" href="#about">About</a></li>
           <li><a class="header__menu__item" href="#skills">Skills</a></li>
-          <li><a class="header__menu__item" href="#work">My work</a></li>
+          <li><a class="header__menu__item" href="#work">Work</a></li>
           <li>
-            <a class="header__menu__item" href="#testimonial">Testimonial</a>
+            <a class="header__menu__item" href="#testimonial">Testimonials</a>
           </li>
           <li><a class="header__menu__item" href="#contact">Contact</a></li>
         </ul>
@@ -68,22 +69,23 @@
             alt="Alan's profile"
           />
           <h2 class="home__title">
-            Hello <br />I&#39;m
-            <strong class="home__title__strong">Software Engineer</strong>, Alan
+            Hello, I'm Alan,<br />
+            a dedicated
+            <strong class="home__title__strong">Software Engineer</strong>
           </h2>
           <p class="home__description">
-            A software engineer currently residing in Uijeongbu, Gyeonggi-do
+            Based in Uijeongbu, Gyeonggi-do, I craft innovative software
+            solutions.
           </p>
-          <a class="home__contact" href="#contact">Contact Me</a>
+          <a class="home__contact" href="#contact">Get in Touch</a>
         </div>
       </section>
       <!-- About -->
       <section id="about" class="section max-container">
-        <h2 class="title">About me</h2>
+        <h2 class="title">About Me</h2>
         <p class="description">
-          I graduated from the Department of Computer Engineering and obtained
-          qualifications as an information processing engineer and information
-          security engineer.
+          I hold a degree in Computer Engineering and have certifications in
+          Information Processing and Information Security.
         </p>
         <ul class="majors">
           <li class="major">
@@ -94,27 +96,27 @@
           <li class="major">
             <i class="fa-solid fa-mobile major__icon"></i>
             <p class="major__title">Mobile</p>
-            <p>Android, iOS, React Navive, Flutter, Java, Swift, Kotlin</p>
+            <p>Android, iOS, React Native, Flutter, Java, Swift, Kotlin</p>
           </li>
           <li class="major">
             <i class="fa-solid fa-server major__icon"></i>
             <p class="major__title">Back-end</p>
-            <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
+            <p>Java, JavaScript, Go, Node.js, REST APIs, GraphQL</p>
           </li>
         </ul>
         <ul class="jobs">
           <li class="job">
-            <img src="images/jobs/google.png" alt="goole logo" />
+            <img src="images/jobs/google.png" alt="Google logo" />
             <div>
-              <p class="job__name">Google as Senior Software Engineer</p>
-              <p class="job__period">2025 February - Untill now</p>
+              <p class="job__name">Senior Software Engineer at Google</p>
+              <p class="job__period">February 2025 - Present</p>
             </div>
           </li>
           <li class="job">
             <img src="images/jobs/samsung.png" alt="Samsung logo" />
             <div>
-              <p class="job__name">Samsung as Software Engineer</p>
-              <p class="job__period">2023 February - 2024 December</p>
+              <p class="job__name">Software Engineer at Samsung</p>
+              <p class="job__period">February 2023 - December 2024</p>
             </div>
           </li>
         </ul>
@@ -122,13 +124,13 @@
       <!-- Skills -->
       <section id="skills" class="section">
         <div class="max-container">
-          <h2 class="title">My Skills</h2>
-          <p class="description">Skills & Attributes</p>
+          <h2 class="title">Skills & Expertise</h2>
+          <p class="description">Technical Skills & Personal Attributes</p>
           <p>
-            Experience with all phases of the software life-cycle.Passion for
-            learning new technologies. Capable of working within a team
-            environment and independently. Ability to plan and time schedule,
-            work under strict time pressure and adapt quickly when needed.
+            I have experience in every phase of the software development
+            lifecycle and a passion for new technologies. I excel in both team
+            environments and independent projects, and I’m skilled in planning,
+            time management, and performing under pressure.
           </p>
           <div class="skills">
             <section class="skills__coding">
@@ -176,7 +178,7 @@
                 </li>
                 <li class="bar">
                   <div class="bar__metadata">
-                    <span>Nodejs</span><span>68%</span>
+                    <span>Node.js</span><span>68%</span>
                   </div>
                   <div class="bar__bg">
                     <div class="bar__value" style="width: 68%"></div>
@@ -188,18 +190,18 @@
               <h3 class="skills__title">Tools</h3>
               <ul>
                 <li>Visual Studio Code</li>
-                <li>Intellij</li>
-                <li>Android Studio Code</li>
-                <li>iOS development tools</li>
-                <li>Sketch app</li>
+                <li>IntelliJ IDEA</li>
+                <li>Android Studio</li>
+                <li>Xcode</li>
+                <li>Sketch</li>
               </ul>
             </section>
             <section class="skills__etc">
-              <h3 class="skills__title">Etc</h3>
+              <h3 class="skills__title">Others</h3>
               <ul>
                 <li>Git</li>
                 <li>Scrum Master</li>
-                <li>Math</li>
+                <li>Mathematics</li>
               </ul>
             </section>
           </div>
@@ -208,7 +210,7 @@
       <!-- Work -->
       <section id="work" class="section">
         <div class="max-container">
-          <h2 class="title">My work</h2>
+          <h2 class="title">My Work</h2>
           <p class="description">Projects</p>
           <ul class="categories">
             <li>
@@ -237,12 +239,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project1.webp"
-                  alt="Project1"
+                  alt="Project 1"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #1</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A responsive clone project showcasing clean HTML structure
+                    and CSS styling.
+                  </p>
                 </div>
               </a>
             </li>
@@ -250,12 +255,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project2.webp"
-                  alt="Project2"
+                  alt="Project 2"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #2</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    An interactive clone project emphasizing modern design
+                    principles using HTML and CSS.
+                  </p>
                 </div>
               </a>
             </li>
@@ -263,12 +271,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project3.webp"
-                  alt="Project3"
+                  alt="Project 3"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A backend-integrated clone project that combines RESTful API
+                    calls with a basic HTML/CSS layout.
+                  </p>
                 </div>
               </a>
             </li>
@@ -276,12 +287,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project4.webp"
-                  alt="Project4"
+                  alt="Project 4"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #4</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A mobile-first clone project designed for intuitive user
+                    interaction and fast loading times.
+                  </p>
                 </div>
               </a>
             </li>
@@ -289,12 +303,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project5.webp"
-                  alt="Project5"
+                  alt="Project 5"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #5</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A visually engaging clone project highlighting advanced CSS
+                    animations and layouts.
+                  </p>
                 </div>
               </a>
             </li>
@@ -302,12 +319,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project6.webp"
-                  alt="Project6"
+                  alt="Project 6"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #6</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A full-stack clone project that merges dynamic server-side
+                    logic with a sleek HTML/CSS front-end.
+                  </p>
                 </div>
               </a>
             </li>
@@ -315,12 +335,15 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project7.webp"
-                  alt="Project7"
+                  alt="Project 7"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #7</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    A cross-platform mobile clone project focused on performance
+                    and modern UI design.
+                  </p>
                 </div>
               </a>
             </li>
@@ -328,77 +351,75 @@
               <a href="#" target="_blank">
                 <img
                   src="images/projects/project8.webp"
-                  alt="Project8"
+                  alt="Project 8"
                   class="project__img"
                 />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #8</h3>
-                  <p>clone Coding with HTML, CSS</p>
+                  <p>
+                    An all-encompassing clone project that leverages HTML, CSS,
+                    and a touch of JavaScript for dynamic effects.
+                  </p>
                 </div>
               </a>
             </li>
           </ul>
         </div>
       </section>
-      <!-- Testmonials -->
+      <!-- Testimonials -->
       <section id="testimonial" class="section max-container">
-        <h2 class="title">Testimonial</h2>
-        <p class="description">See What they say about me</p>
+        <h2 class="title">Testimonials</h2>
+        <p class="description">Hear what others say about my work</p>
         <ul class="testimonials">
           <li class="testimonial">
             <img
               src="images/testimonials/people1.webp"
-              alt="people1"
+              alt="James Kim"
               class="testimonial__img"
             />
             <div class="testimonial__bubble">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Aliquid nesciunt molestiae quos, dolorem deserunt sequi! Optio,
-                eaque doloribus? Provident quis, reiciendis ipsum fugiat aperiam
-                alias ex eos repellat cumque ipsa.
+                Alan's expertise and dedication shine through in every project.
+                His innovative approach and problem-solving skills have truly
+                impressed our team.
               </p>
               <p>
-                <a href="#" class="testimonial__bubble__name">James kim</a>
-                /google
+                <a href="#" class="testimonial__bubble__name">James Kim</a>
+                / Google
               </p>
             </div>
           </li>
           <li class="testimonial">
             <img
               src="images/testimonials/people2.webp"
-              alt="people2"
+              alt="David Jang"
               class="testimonial__img"
             />
             <div class="testimonial__bubble">
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia
-                sint nisi, aperiam beatae nostrum fuga ea voluptatum nam ipsa
-                adipisci eveniet asperiores iusto natus, rerum excepturi amet
-                unde quos esse.
+                Working with Alan has been a pleasure. His clear communication
+                and commitment to quality make him a standout engineer.
               </p>
               <p>
-                <a href="#" class="testimonial__bubble__name">David jang</a>
-                /Samsung
+                <a href="#" class="testimonial__bubble__name">David Jang</a>
+                / Samsung
               </p>
             </div>
           </li>
           <li class="testimonial">
             <img
               src="images/testimonials/people3.webp"
-              alt="people3"
+              alt="Anna Jin"
               class="testimonial__img"
             />
             <div class="testimonial__bubble">
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Quaerat ducimus ipsa obcaecati, atque architecto facilis. Ex
-                perferendis vero optio quas hic numquam consequatur maiores
-                iste, ut facilis sapiente quia temporibus!
+                Alan consistently delivers exceptional results. His technical
+                acumen and collaborative spirit make him an invaluable asset.
               </p>
               <p>
                 <a href="#" class="testimonial__bubble__name">Anna Jin</a>
-                /Samsung
+                / Samsung
               </p>
             </div>
           </li>
@@ -406,7 +427,7 @@
       </section>
       <!-- Arrow up -->
       <aside>
-        <a class="arrow-up" href="#home" title="back to top">
+        <a class="arrow-up" href="#home" title="Back to Top">
           <i class="fa-solid fa-arrow-up"></i>
         </a>
       </aside>
@@ -414,15 +435,15 @@
     <!-- Footer -->
     <footer id="contact" class="section">
       <div class="max-container">
-        <h2 class="title">Let&#39;s talk</h2>
-        <p class="description">hahahoho5811@gmail.com</p>
+        <h2 class="title">Let's Connect</h2>
+        <p class="description">Email: hahahoho5811@gmail.com</p>
         <ul class="contact__links">
           <li>
             <a
               class="contact__link"
               href="https://github.com/SungRyulCho"
               target="_blank"
-              title="my github link"
+              title="My GitHub Profile"
             >
               <i class="fa-brands fa-github"></i>
             </a>
@@ -432,13 +453,13 @@
               class="contact__link"
               href="https://www.linkedin.com/in/sungryul-cho-848612346/"
               target="_blank"
-              title="my linkedin link"
+              title="My LinkedIn Profile"
             >
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
         </ul>
-        <p>©Software Engineer Alan - All rights reserved</p>
+        <p>© Alan, Software Engineer - All rights reserved</p>
       </div>
     </footer>
   </body>
