--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://sungryulcho.github.io/portfolio/image/og.webp"
+      content="https://sungryulcho.github.io/portfolio/images/og.webp"
     />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
