--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
       src="https://kit.fontawesome.com/18c8ec7879.js"
       crossorigin="anonymous"
     ></script>
-    <!-- CSS -->
+    <!-- Typeit -->
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <!-- javascript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
     <script type="module" src="src/active_menu.js" defer></script>
+    <script type="module" src="src/type.js" defer></script>
   </head>
   <body>
     <!-- Header -->
