--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             src="images/profile.png"
             alt="Alan's profile"
           />
-          <h2 class="home__title">
-            Hello, I'm Alan,<br />
-            a dedicated
-            <strong class="home__title__strong">Software Engineer</strong>
+          <h2 class="home__title" aria-label="Hello, I'm Dream Coder, Alan">
+            Hello<br />
+            I'm
+            <strong class="home__title__strong">Dream Coder</strong>, Alan
           </h2>
           <p class="home__description">
-            Based in Uijeongbu, Gyeonggi-do, I craft innovative software
-            solutions.
+            I specialize in crafting innovative software solutions with
+            precision and passion.
           </p>
           <a class="home__contact" href="#contact">Get in Touch</a>
         </div>
