home-aria-lable

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             src="images/profile.png"
             alt="Alan's profile"
           />
-          <h2 class="home__title" aria-label="Hello, I'm Dream Coder, Alan">
+          <h2 class="home__title" aria-label="Hello, I'm Dream Coder Alan">
             Hello<br />
-            I'm
+            I&#39;m
             <strong class="home__title__strong">Dream Coder</strong>, Alan
           </h2>
           <p class="home__description">
